chore(sonar): triage code smells — typed exceptions, deprecated APIs, micro cleanups (#236) (#254)
Co-authored-by: Tomáš Samek <jerry.samek@gmail.com>